<resources>
    <string name="app_name">ChildLocate</string>
    <string name="location_tutorial">Location Tutorial</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">User ID</string>
    <string name="change_password">Change Password</string>
    <string name="child_name">Child Name</string>
    <string name="logout">Logout</string>
    <string name="show_history">See your child\'s location on Maps\n</string>

    <string name="click_to_choose_avatar">Click to choose your child\'s avatar</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="email">Email:</string>
    <string name="phone">Phone Number:</string>
    <string name="app_version">App Version:</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="child_name_format">Your child name: %1$s</string>
    <string name="userid_format">Your UserId: %1$s</string>
    <string name="email_format">Your email: %1$s</string>

    <string name="usage_time_format">%d giờ %d phút</string>
    <string name="accessibility_service_description">Dịch vụ này giúp bảo vệ trẻ em khỏi nội dung không phù hợp bằng cách giám sát và lọc văn bản trên màn hình.</string>


</resources>